-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 13, 14
-
Component/s: hotspot
-
b17
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231761 | 13.0.2 | Roland Westrelin | P1 | Resolved | Fixed | b02 |
This issue was originally reported here:
https://github.com/AdoptOpenJDK/openjdk-build/issues/1291
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (loopnode.hpp:979), pid=1, tid=30
# guarantee(d != NULL) failed: Null dominator info.
#
# JRE version: OpenJDK Runtime Environment (13.0+33) (build 13+33)
# Java VM: OpenJDK 64-Bit Server VM (13+33, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb140a4] PhaseIdealLoop::dom_depth(Node*) const [clone .isra.122]+0x94
#
# Core dump will be written. Default location: /opt/core
#
# An error report file with more information is saved as:
# /opt/hs_err_pid1.log
#
# Compiler replay data is saved as:
# /opt/replay_pid1.log
#
# If you would like to submit a bug report, please visit:
# https://github.com/AdoptOpenJDK/openjdk-build/issues
#
[error occurred during error reporting (), id 0xb, SIGSEGV (0xb) at pc=0x00007efe29bab884]
Seems to only happen with -XX:+UseShenandoahGC on JDK 13+33 (GA version), not with JDK 12-ga.
Note that this crash happens in a docker container running on kubernetes.
https://github.com/AdoptOpenJDK/openjdk-build/issues/1291
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (loopnode.hpp:979), pid=1, tid=30
# guarantee(d != NULL) failed: Null dominator info.
#
# JRE version: OpenJDK Runtime Environment (13.0+33) (build 13+33)
# Java VM: OpenJDK 64-Bit Server VM (13+33, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb140a4] PhaseIdealLoop::dom_depth(Node*) const [clone .isra.122]+0x94
#
# Core dump will be written. Default location: /opt/core
#
# An error report file with more information is saved as:
# /opt/hs_err_pid1.log
#
# Compiler replay data is saved as:
# /opt/replay_pid1.log
#
# If you would like to submit a bug report, please visit:
# https://github.com/AdoptOpenJDK/openjdk-build/issues
#
[error occurred during error reporting (), id 0xb, SIGSEGV (0xb) at pc=0x00007efe29bab884]
Seems to only happen with -XX:+UseShenandoahGC on JDK 13+33 (GA version), not with JDK 12-ga.
Note that this crash happens in a docker container running on kubernetes.
- backported by
-
JDK-8231761 [Shenandoah] guarantee(d != NULL) failed: Null dominator info
-
- Resolved
-