8231405: [Shenandoah] guarantee(d != NULL) failed: Null dominator info

Reviewed-by: shade, rkennke